<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99000000"
    tools:context="com.example.presentation.point_info.PointInfoDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/sheet_dialog"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/base_dimen"
            android:paddingTop="@dimen/base_dimen"
            android:text="@string/point_info_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/base_dimen"
            android:paddingTop="8dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/base_dimen"
            android:paddingTop="@dimen/base_dimen"
            android:text="@string/point_info_address"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/base_dimen"
            android:paddingTop="8dp"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/delete_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/base_dimen"
                android:text="@string/point_info_delete" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/navigate_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/base_dimen"
                android:text="@string/point_info_navigation" />
        </LinearLayout>


    </LinearLayout>

</FrameLayout>